--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-23 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed header for GCC 4.4 compatibility.
+
 2012-09-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Using usleep instead of select when available.
