Adding progress support to long message protocol

--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -204,7 +204,7 @@ to have the right information, nothing is missing.
 @strong{Return value:}  integer.
 @end deftypefun
 
-@deftypefun {lw6sys_list_t *} {lw6dat_warehouse_get_msg_list_by_seq} (lw6dat_warehouse_t * @var{warehouse}, int64_t @var{seq_min}, int64_t @var{seq_max}, int @var{for_reference})
+@deftypefun {lw6sys_list_t *} {lw6dat_warehouse_get_msg_list_by_seq} (lw6dat_warehouse_t * @var{warehouse}, int64_t @var{seq_min}, int64_t @var{seq_max}, int @var{for_reference}, lw6sys_progress_t * @var{progress})
 @var{warehouse}:  object to query
 
 @var{seq_min}:  lowest sequence number (round or chat index)
@@ -212,6 +212,8 @@ to have the right information, nothing is missing.
 @var{seq_max}:  highest sequence number (round or chat index)
 
 @var{for_reference}:  set to 1 if this is for reference building else 0 for draft
+
+@var{progress}:  progress indicator (read/write).
 
 Gets the list of messages for a given sequence (round or chat index),
 polling all the nodes. The from and to boundaries are included.
