Relaxed network test suite to generate snapshots, #37429 still open.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-02 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Relaxed network test suite to generate snapshots, #37429 still open.
+
 2012-09-26 : Christian Mauduit <ufoot@ufoot.org>
 
 	Added Jenkins (continuous integration) script.
